[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/textures/mega-rocket.png" type="Texture" id=1]
[ext_resource path="res://actors/shots/rocket.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "activate"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Source:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Source:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=2]
resource_name = "deactivate"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Source:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Source:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="MegaRocket" type="Node2D"]
script = ExtResource( 2 )

[node name="Source" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 32 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 64, 64 )

[node name="Laser" type="Sprite" parent="Source"]
position = Vector2( 0, 32 )
scale = Vector2( 1, -16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 69, 64, 1 )

[node name="WallFinder" type="RayCast2D" parent="."]
visible = false
cast_to = Vector2( 0, 600 )
collision_mask = 2

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 48

[node name="Shape" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PoolVector2Array( 16, 16, -16, 16, -16, 32, 16, 32 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/activate = SubResource( 1 )
anims/deactivate = SubResource( 2 )
[connection signal="area_entered" from="Hitbox" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_body_entered"]
